--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
     <body>
         <header>
-            <h1>মেসার্স ফাউজিয়া ডেইরী ফার্ম</h1>
+            <h1 class="title-name">মেসার্স ফাউজিয়া ডেইরী ফার্ম</h1>
         </header>
 
         <main>
