--- a/main.html
+++ b/main.html
@@ -7,10 +7,11 @@
         <title>Fauzia Dairy Farm</title>
     </head>
 
-    <body>
-        <header>
+    <body class="background-image">
+        <header class="title-bar">
             <h1 class="title-name">মেসার্স ফাউজিয়া ডেইরী ফার্ম</h1>
-            <p class="established">প্রতিষ্ঠিতঃ ২০০৩ খ্রীঃ</p>       
+            <p class="established">প্রতিষ্ঠিতঃ ২০০৩ খ্রীঃ</p>
+            <img class="logo" src="logo.png" alt="logo" width="90px">     
         </header>
 
         <main>
