totally newly edited

--- a/main.html
+++ b/main.html
@@ -8,18 +8,20 @@
     </head>
 
     <body class="background-image">
-        <header class="title-bar">
-            <h1 class="title-name">মেসার্স ফাউজিয়া ডেইরী ফার্ম</h1>
-            <p class="established">প্রতিষ্ঠিতঃ ২০০৩ খ্রীঃ</p>
-            <img class="logo" src="logo.png" alt="logo" width="90px">     
-        </header>
-
         <main>
-            
+            <header>
+                <h1 class="title-name">মেসার্স ফাউজিয়া ডেইরী ফার্ম</h1>
+                <p class="established">প্রতিষ্ঠিতঃ ২০০৩ খ্রীঃ</p>
+                <img class="logo" src="logo.png" alt="logo" width="90px">     
+            </header>
+        <hr class="hr-1st">
+            <section>
+                <h2></h2>
+            </section>
+        <hr class="hr-2">
+            <footer>
+
+            </footer>
         </main>
-
-        <footer>
-
-        </footer>
     </body>
 </html>
