--- a/main.html
+++ b/main.html
@@ -9,18 +9,28 @@
 
     <body class="background-image">
         <main>
+<!--Header starts from here.-->
             <header>
                 <h1 class="title-name">মেসার্স ফাউজিয়া ডেইরী ফার্ম</h1>
                 <p class="established">প্রতিষ্ঠিতঃ ২০০৩ খ্রীঃ</p>
                 <img class="logo" src="logo.png" alt="logo" width="90px">     
             </header>
         <hr class="hr-1st">
+<!--Section no.1 starts from here.-->
             <section>
-                <h2></h2>
+                <h2>বিশেষত্ব</h2>
+                <ul class="bisesotto">
+                    <li class="bisesotto-point">উন্নত জাতের গাভী থেকে দুধ প্রস্তুত করা হয়।</li>
+                    <li class="bisesotto-point">গাভীর স্বাস্থ্য ও খাদ্য প্রতিনিয়ত পর্যবেক্ষন করা হয়।</li>
+                    <li class="bisesotto-point">খামার এবং প্রকল্প প্রদর্শনী করানো হয়, এবং নতুন উদ্যোগতাদের প্রতি-নির্দেশনা প্রদান করা হয়।</li>
+                    <li class="bisesotto-point">শুদ্ধতা ও বিশ্বস্ততায় অক্ষুন্ন প্রচেষ্টা আমাদের।</li>
+                </ul>
             </section>
         <hr class="hr-2">
+<!--footer starts from here.-->
             <footer>
-
+                <p class="facebook"><a href="https://www.facebook.com/fauziadairyfarm" target="_blank">আমাদের ফেসবুক পেজ পরিদর্শন করুন</a></p>
+                <p>@কপিরাইটঃ ফাউজিয়া ডেইরী ফার্ম</p>
             </footer>
         </main>
     </body>
