section-2 'product added'

--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
 
     <body class="background-image">
         <main>
-<!--Header starts from here.-->
+<!-- Header starts from here.-->
             <header>
                 <h1 class="title-name">মেসার্স ফাউজিয়া ডেইরী ফার্ম</h1>
                 <p class="established">প্রতিষ্ঠিতঃ ২০০৩ খ্রীঃ</p>
                 <img class="logo" src="logo.png" alt="logo" width="90px">     
             </header>
         <hr class="hr-1st">
-<!--Section no.1 starts from here.-->
-            <section>
+<!-- Section no.1 starts from here.-->
+            <section class="section-1">
                 <h2>বিশেষত্ব</h2>
                 <ul class="bisesotto">
                     <li class="bisesotto-point">উন্নত জাতের গাভী থেকে দুধ প্রস্তুত করা হয়।</li>
@@ -26,8 +26,21 @@
                     <li class="bisesotto-point">শুদ্ধতা ও বিশ্বস্ততায় অক্ষুন্ন প্রচেষ্টা আমাদের।</li>
                 </ul>
             </section>
+<!-- section-2 starts from here. -->
+            <section class="section-2">
+                <h2>আমাদের পণ্য সমূহ</h2>
+                <article class="item">
+                    <p class="type">দুধ (তরল)</p><p class="price">৮০/-টাকা/লিটার</p>
+                </article>
+                <article class="item">
+                    <p class="type">ঘিঁ</p><p class="price">---/-টাকা/কেজি</p>
+                </article>
+                <article class="item">
+                    <p class="type">গাভী</p><p class="price">---/-টাকা/প্রতি</p>
+                </article>
+            </section>
         <hr class="hr-2">
-<!--footer starts from here.-->
+<!-- footer starts from here.-->
             <footer>
                 <p class="facebook"><a href="https://www.facebook.com/fauziadairyfarm" target="_blank">আমাদের ফেসবুক পেজ পরিদর্শন করুন</a></p>
                 <p>@কপিরাইটঃ ফাউজিয়া ডেইরী ফার্ম</p>
