section-3 'package added'

--- a/main.html
+++ b/main.html
@@ -39,6 +39,19 @@
                     <p class="type">গাভী</p><p class="price">---/-টাকা/প্রতি</p>
                 </article>
             </section>
+<!-- section-3 starts from here. -->
+            <section class="section-3">
+                <h2>আমাদের প্যাকেজগুলি</h2>
+                <article class="item">
+                    <p class="type">মাসিক</p><p class="minimum">কমপক্ষে ১/২লিটার</p><p class="pricing">৮০/-টাকা/লিটার -ফ্রী হোম ডেলিভারি</p>
+                </article>
+                <article class="item">
+                    <p class="type">সপ্তাহিক</p><p class="minimum">কমপক্ষে ১/২লিটার</p><p class="pricing">৮০/-টাকা/লিটার -ফ্রী হোম ডেলিভারি</p>
+                </article>
+                <article class="item">
+                    <p class="type">দৈনিক</p><p class="minimum">কমপক্ষে ৩কেজি</p><p class="pricing">৮০/-টাকা/লিটার -হোম ডেলিভারি চার্জ ২০/-টাকা</p>
+                </article>
+            </section>
         <hr class="hr-2">
 <!-- footer starts from here.-->
             <footer>
