--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
         <hr class="hr-2">
 <!-- footer starts from here.-->
             <footer>
-                <p class="facebook"><a href="https://www.facebook.com/fauziadairyfarm" target="_blank">আমাদের ফেসবুক পেজ পরিদর্শন করুন</a></p>
+                <p class="facebook"><a href="https://www.facebook.com/fauziadairyfarm" target="_blank">আমাদের ফেসবুক পেজটি পরিদর্শন করুন</a></p>
                 <p>@কপিরাইটঃ ফাউজিয়া ডেইরী ফার্ম</p>
             </footer>
         </main>
